--- a/Part_I_exploration_template_Ebola_data.ipynb
+++ b/Part_I_exploration_template_Ebola_data.ipynb
@@ -449,7 +449,7 @@
     "\n",
     "> I am interested in examining the 'Cumulative number of confirmed Ebola deaths', the 'Cumulative number of probable Ebola cases' and the Case fatality rate (CFR) of confirmed Ebola cases.\n",
     "\n",
-    "### Features in the dataset that will help my investigation into the features of interest?\n",
+    "### Features in the dataset that will help my investigation into the features of interest\n",
     "\n",
     "> My hypothesis is that as the number of deaths increases, the more confirmed cases of Ebola. To get this, I will examine how the column variables \"Cumulative number of confirmed Ebola cases\" relates to the variable \"Cumulative number of confirmed Ebola deaths\".\n",
     "\n",
