--- a/Part_I_exploration_template_Ebola_data.ipynb
+++ b/Part_I_exploration_template_Ebola_data.ipynb
@@ -3401,7 +3401,8 @@
     "sb.countplot(data = ebola_df, x = 'total_death_category', color = 'green', linewidth = 5 , edgecolor = sb.color_palette(\"Greens\"));\n",
     "plt.xlabel('Category of country\\'s total ebola deaths', fontsize = 12, weight = \"bold\")\n",
     "plt.ylabel('Count', fontsize = 12, weight = \"bold\")\n",
-    "plt.title('Chart of Total Ebola Deaths by Category', fontsize =14, weight = \"bold\");"
+    "plt.title('Chart of Total Ebola Deaths by Category', fontsize =14, weight = \"bold\");\n",
+    "plt.bar_label(myScatterPlot)"
    ]
   },
   {
