--- a/Part_I_exploration_template_Ebola_data.ipynb
+++ b/Part_I_exploration_template_Ebola_data.ipynb
@@ -3861,7 +3861,7 @@
     "grouped = grouped.sort_values(by = ['total_confirmed_deaths'], ascending = True)\n",
     "\n",
     "# Plot barchart to display information\n",
-    "grouped.plot.barh(color = 'green', figsize = [18,12]);\n",
+    "pplot = grouped.plot.barh(color = 'green', figsize = [18,12]);\n",
     "plt.xscale('log')\n",
     "\n",
     "# Add x label and format it\n",
@@ -3871,7 +3871,10 @@
     "plt.ylabel('Country', fontsize = 14, weight = \"bold\")\n",
     "\n",
     "# Add title and format it\n",
-    "plt.title('Cumulative Confirmed Deaths in the Countries (Aug. 2014- Mar. 2016)', fontsize =18, weight = \"bold\");\n"
+    "plt.title('Cumulative Confirmed Deaths in the Countries (Aug. 2014- Mar. 2016)', fontsize =18, weight = \"bold\");\n",
+    "\n",
+    "# Add data labels to the bars\n",
+    "plt.bar_label(pplot, fontsize = 13)"
    ]
   },
   {
